--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
+appdirs==1.4.3
+asgiref==3.2.10
+astroid==2.2.5
+attrs==19.1.0
+certifi==2019.6.16
+Click==7.0
+colorama==0.4.1
 Django==3.0.7
+django-material-admin==1.1.20
+django-searchable-select==1.5.0
+entrypoints==0.3
+flake8==3.7.8
+isort==4.3.21
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+mysql-connector-python==8.0.16
+mysqlclient==1.4.2.post1
+numpy==1.18.1
+pandas==1.0.4
+protobuf==3.9.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 PyMySQL==0.9.3
-
-pandas~=1.0.1
+python-dateutil==2.8.1
+pytz==2019.1
+rope==0.14.0
+six==1.12.0
+sqlparse==0.3.0
+toml==0.10.0
+typed-ast==1.4.0
+wincertstore==0.2
+wrapt==1.11.2
+yapf==0.28.0
